[gd_scene load_steps=14 format=3 uid="uid://d8flqb4ktbdj"]

[ext_resource type="Script" path="res://scenes/title_screen.gd" id="1_15vqh"]
[ext_resource type="VideoStream" path="res://video/title.ogv" id="2_kecq5"]
[ext_resource type="Texture2D" uid="uid://bbkrd4a4vf8jq" path="res://sprites/logo.png" id="2_te855"]
[ext_resource type="PackedScene" uid="uid://b4uyd51hspl4x" path="res://objects/ui/menu.tscn" id="3_l3nvr"]
[ext_resource type="FontFile" uid="uid://cwgn18qi488vs" path="res://fonts/breamcatcher rg.otf" id="3_vsoy8"]
[ext_resource type="Texture2D" uid="uid://daa3b88n7srnw" path="res://sprites/credits.png" id="5_i1f76"]
[ext_resource type="Texture2D" uid="uid://6d8qhxgl0vum" path="res://sprites/and_the_rest.png" id="5_oi1k3"]
[ext_resource type="Texture2D" uid="uid://obrdj1j4ch3e" path="res://sprites/jg.png" id="7_p4cu5"]
[ext_resource type="Texture2D" uid="uid://c2d2eiovxpw0o" path="res://sprites/kyveri.png" id="8_wf3n4"]
[ext_resource type="AudioStream" uid="uid://bc01o3e75dgba" path="res://audio/music/title.ogg" id="10_syov0"]

[sub_resource type="Animation" id="Animation_quns4"]
resource_name = "fade_in"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.2, 7, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenu/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 9.3, 9.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VideoStreamPlayer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.5, 7.5, 10),
"transitions": PackedFloat32Array(1, -2, -2, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0.0980392, 0.0980392, 0.0980392, 1), Color(0.0980392, 0.0980392, 0.0980392, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("JG:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Kyveri:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5, 2, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AndTheRest:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3, 3.5, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Audio_BGM:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ruw4g"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenu/Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainMenu/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VideoStreamPlayer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Audio_BGM:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -40.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nlgrs"]
_data = {
"fade_in": SubResource("Animation_quns4"),
"fade_out": SubResource("Animation_ruw4g")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15vqh")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_kecq5")
autoplay = true
expand = true

[node name="JG" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_p4cu5")
expand_mode = 3
stretch_mode = 4

[node name="Kyveri" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.806
offset_top = -180.0
offset_right = 185.806
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_wf3n4")
expand_mode = 3
stretch_mode = 4

[node name="AndTheRest" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_oi1k3")
expand_mode = 3
stretch_mode = 4

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Logo" type="TextureRect" parent="MainMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 412.0
offset_right = 864.0
offset_bottom = 668.0
grow_vertical = 2
texture = ExtResource("2_te855")
expand_mode = 2
stretch_mode = 5

[node name="Menu" parent="MainMenu" instance=ExtResource("3_l3nvr")]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1032.0
offset_top = 356.0
offset_right = 1175.0
offset_bottom = 648.0
grow_vertical = 2
alignment = 2

[node name="Play" type="Label" parent="MainMenu/Menu"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_vsoy8")
theme_override_font_sizes/font_size = 60
text = "Play"
horizontal_alignment = 2

[node name="Credits" type="Label" parent="MainMenu/Menu"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_vsoy8")
theme_override_font_sizes/font_size = 60
text = "Credits"
horizontal_alignment = 2

[node name="Quit" type="Label" parent="MainMenu/Menu"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("3_vsoy8")
theme_override_font_sizes/font_size = 60
text = "Quit"
horizontal_alignment = 2

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Credits"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -300.0
offset_right = 416.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_i1f76")
expand_mode = 3
stretch_mode = 4

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -95.5
offset_top = -72.0
offset_right = 95.5
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_fonts/font = ExtResource("3_vsoy8")
theme_override_font_sizes/font_size = 32
text = "Press (C) to go back"

[node name="Audio_BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_syov0")
bus = &"BGM"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nlgrs")
}

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="item_selected" from="MainMenu/Menu" to="." method="_on_menu_item_selected"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
